--- a/src/page-info.html
+++ b/src/page-info.html
@@ -37,13 +37,13 @@
 </head>
 
 <body>
-  <header class="header js-header">
+  <header class="header">
     <div class="header__inner">
-      <div class="header__logoBlock">
+      <h1 class="header__logoBlock">
         <a href="/" class="header__logoLink js-logoLink">
           <img class="header__logo" src="./assets/images/common/logo.svg" alt="CodeUps">
         </a>
-      </div>
+      </h1>
       <button class="header__drawer hamburger js-hamburger">
         <span></span>
         <span></span>
@@ -101,9 +101,9 @@
                       <a href="/page-price.html">料金一覧</a>
                     </div>
                     <ul class="menu__list">
-                      <li><a href="/page-price.html">ライセンス講習</a></li>
-                      <li><a href="/page-price.html">体験ダイビング</a></li>
-                      <li><a href="/page-price.html">ファンダイビング</a></li>
+                      <li><a href="/page-price.html#item1">ライセンス講習</a></li>
+                      <li><a href="/page-price.html#item2">体験ダイビング</a></li>
+                      <li><a href="/page-price.html#item3">ファンダイビング</a></li>
                     </ul>
                   </div>
                 </div>
@@ -418,9 +418,9 @@
                     <a href="/page-price.html">料金一覧</a>
                   </div>
                   <ul class="menu__list">
-                    <li><a href="/page-price.html">ライセンス講習</a></li>
-                    <li><a href="/page-price.html">体験ダイビング</a></li>
-                    <li><a href="/page-price.html">ファンダイビング</a></li>
+                    <li><a href="/page-price.html#item1">ライセンス講習</a></li>
+                    <li><a href="/page-price.html#item2">体験ダイビング</a></li>
+                    <li><a href="/page-price.html#item3">ファンダイビング</a></li>
                   </ul>
                 </div>
               </div>
