--- a/src/page-price.html
+++ b/src/page-price.html
@@ -39,11 +39,11 @@
 <body>
   <header class="header">
     <div class="header__inner">
-      <div class="header__logoBlock">
+      <h1 class="header__logoBlock">
         <a href="/" class="header__logoLink js-logoLink">
           <img class="header__logo" src="./assets/images/common/logo.svg" alt="CodeUps">
         </a>
-      </div>
+      </h1>
       <button class="header__drawer hamburger js-hamburger">
         <span></span>
         <span></span>
@@ -77,9 +77,9 @@
                       <a href="/page-info.html">ダイビング情報</a>
                     </div>
                     <ul class="menu__list">
-                      <li><a href="/page-info.html">ライセンス講習</a></li>
-                      <li><a href="/page-info.html">体験ダイビング</a></li>
-                      <li><a href="/page-info.html">ファンダイビング</a></li>
+                      <li><a href="/page-info.html#tab1">ライセンス講習</a></li>
+                      <li><a href="/page-info.html#tab2">体験ダイビング</a></li>
+                      <li><a href="/page-info.html#tab3">ファンダイビング</a></li>
                     </ul>
                   </div>
                   <div class="menu__item">
@@ -101,9 +101,9 @@
                       <a href="/page-price.html">料金一覧</a>
                     </div>
                     <ul class="menu__list">
-                      <li><a href="/page-price.html">ライセンス講習</a></li>
-                      <li><a href="/page-price.html">体験ダイビング</a></li>
-                      <li><a href="/page-price.html">ファンダイビング</a></li>
+                      <li><a href="/page-price.html#item1">ライセンス講習</a></li>
+                      <li><a href="/page-price.html#item2">体験ダイビング</a></li>
+                      <li><a href="/page-price.html#item3">ファンダイビング</a></li>
                     </ul>
                   </div>
                 </div>
@@ -239,7 +239,7 @@
       <div class="sub-price__inner inner">
         <div class="sub-price__content">
           <ul class="sub-price__list">
-            <li class="sub-price__item">
+            <li class="sub-price__item" id="item1">
               <div class="sub-price__header">
                 <h3 class="sub-price__heading">ライセンス講習</h3>
                 <div class="sub-price__img">
@@ -258,7 +258,7 @@
                 <dd>&yen;70&#044;000</dd>
               </dl>
             </li>
-            <li class="sub-price__item">
+            <li class="sub-price__item" id="item2">
               <div class="sub-price__header">
                 <h3 class="sub-price__heading">体験ダイビング</h3>
                 <div class="sub-price__img">
@@ -279,7 +279,7 @@
                 <dd>&yen;18&#044;000</dd>
               </dl>
             </li>
-            <li class="sub-price__item">
+            <li class="sub-price__item" id="item3">
               <div class="sub-price__header">
                 <h3 class="sub-price__heading">ファンダイビング</h3>
                 <div class="sub-price__img">
@@ -422,9 +422,9 @@
                     <a href="/page-info.html">ダイビング情報</a>
                   </div>
                   <ul class="menu__list">
-                    <li><a href="/page-info.html">ライセンス取得</a></li>
-                    <li><a href="/page-info.html">体験ダイビング</a></li>
-                    <li><a href="/page-info.html">ファンダイビング</a></li>
+                    <li><a href="/page-info.html#tab1">ライセンス取得</a></li>
+                    <li><a href="/page-info.html#tab2">体験ダイビング</a></li>
+                    <li><a href="/page-info.html#tab3">ファンダイビング</a></li>
                   </ul>
                 </div>
                 <div class="menu__item">
@@ -446,9 +446,9 @@
                     <a href="/page-price.html">料金一覧</a>
                   </div>
                   <ul class="menu__list">
-                    <li><a href="/page-price.html">ライセンス講習</a></li>
-                    <li><a href="/page-price.html">体験ダイビング</a></li>
-                    <li><a href="/page-price.html">ファンダイビング</a></li>
+                    <li><a href="/page-price.html#item1">ライセンス講習</a></li>
+                    <li><a href="/page-price.html#item2">体験ダイビング</a></li>
+                    <li><a href="/page-price.html#item3">ファンダイビング</a></li>
                   </ul>
                 </div>
               </div>
