--- a/src/archive-voice.html
+++ b/src/archive-voice.html
@@ -39,11 +39,11 @@
 <body>
   <header class="header">
     <div class="header__inner">
-      <div class="header__logoBlock">
+      <h1 class="header__logoBlock">
         <a href="/" class="header__logoLink js-logoLink">
           <img class="header__logo" src="./assets/images/common/logo.svg" alt="CodeUps">
         </a>
-      </div>
+      </h1>
       <button class="header__drawer hamburger js-hamburger">
         <span></span>
         <span></span>
@@ -77,9 +77,9 @@
                       <a href="/page-info.html">ダイビング情報</a>
                     </div>
                     <ul class="menu__list">
-                      <li><a href="/page-info.html">ライセンス講習</a></li>
-                      <li><a href="/page-info.html">体験ダイビング</a></li>
-                      <li><a href="/page-info.html">ファンダイビング</a></li>
+                      <li><a href="/page-info.html#tab1">ライセンス講習</a></li>
+                      <li><a href="/page-info.html#tab2">体験ダイビング</a></li>
+                      <li><a href="/page-info.html#tab3">ファンダイビング</a></li>
                     </ul>
                   </div>
                   <div class="menu__item">
@@ -101,9 +101,9 @@
                       <a href="/page-price.html">料金一覧</a>
                     </div>
                     <ul class="menu__list">
-                      <li><a href="/page-price.html">ライセンス講習</a></li>
-                      <li><a href="/page-price.html">体験ダイビング</a></li>
-                      <li><a href="/page-price.html">ファンダイビング</a></li>
+                      <li><a href="/page-price.html#item1">ライセンス講習</a></li>
+                      <li><a href="/page-price.html#item2">体験ダイビング</a></li>
+                      <li><a href="/page-price.html#item3">ファンダイビング</a></li>
                     </ul>
                   </div>
                 </div>
@@ -209,7 +209,6 @@
       </nav>
     </div>
   </header>
-
   <main>
 
     <div class="loading">
@@ -550,9 +549,9 @@
                     <a href="/page-info.html">ダイビング情報</a>
                   </div>
                   <ul class="menu__list">
-                    <li><a href="/page-info.html">ライセンス取得</a></li>
-                    <li><a href="/page-info.html">体験ダイビング</a></li>
-                    <li><a href="/page-info.html">ファンダイビング</a></li>
+                    <li><a href="/page-info.html#tab1">ライセンス取得</a></li>
+                    <li><a href="/page-info.html#tab2">体験ダイビング</a></li>
+                    <li><a href="/page-info.html#tab3">ファンダイビング</a></li>
                   </ul>
                 </div>
                 <div class="menu__item">
@@ -574,9 +573,9 @@
                     <a href="/page-price.html">料金一覧</a>
                   </div>
                   <ul class="menu__list">
-                    <li><a href="/page-price.html">ライセンス講習</a></li>
-                    <li><a href="/page-price.html">体験ダイビング</a></li>
-                    <li><a href="/page-price.html">ファンダイビング</a></li>
+                    <li><a href="/page-price.html#item1">ライセンス講習</a></li>
+                    <li><a href="/page-price.html#item2">体験ダイビング</a></li>
+                    <li><a href="/page-price.html#item3">ファンダイビング</a></li>
                   </ul>
                 </div>
               </div>
