--- a/src/home.html
+++ b/src/home.html
@@ -39,11 +39,11 @@
 <body>
   <header class="header">
     <div class="header__inner">
-      <div class="header__logoBlock">
+      <h1 class="header__logoBlock">
         <a href="/" class="header__logoLink js-logoLink">
           <img class="header__logo" src="./assets/images/common/logo.svg" alt="CodeUps">
         </a>
-      </div>
+      </h1>
       <button class="header__drawer hamburger js-hamburger">
         <span></span>
         <span></span>
@@ -77,9 +77,9 @@
                       <a href="/page-info.html">ダイビング情報</a>
                     </div>
                     <ul class="menu__list">
-                      <li><a href="/page-info.html">ライセンス講習</a></li>
-                      <li><a href="/page-info.html">体験ダイビング</a></li>
-                      <li><a href="/page-info.html">ファンダイビング</a></li>
+                      <li><a href="/page-info.html#tab1">ライセンス講習</a></li>
+                      <li><a href="/page-info.html#tab2">体験ダイビング</a></li>
+                      <li><a href="/page-info.html#tab3">ファンダイビング</a></li>
                     </ul>
                   </div>
                   <div class="menu__item">
@@ -101,9 +101,9 @@
                       <a href="/page-price.html">料金一覧</a>
                     </div>
                     <ul class="menu__list">
-                      <li><a href="/page-price.html">ライセンス講習</a></li>
-                      <li><a href="/page-price.html">体験ダイビング</a></li>
-                      <li><a href="/page-price.html">ファンダイビング</a></li>
+                      <li><a href="/page-price.html#item1">ライセンス講習</a></li>
+                      <li><a href="/page-price.html#item2">体験ダイビング</a></li>
+                      <li><a href="/page-price.html#item3">ファンダイビング</a></li>
                     </ul>
                   </div>
                 </div>
@@ -241,7 +241,7 @@
           <div class="sub-blog__main">
             <div class="sub-blog__cards blog-cards blog-cards--sub-page">
               <div class="blog-cards__card blog-card">
-                <a class="blog-card__link" href="#">
+                <a class="blog-card__link" href="/single.html">
                   <div class="blog-card__img">
                     <img src="./assets/images/common/blog_1.jpg" alt="ピンクの珊瑚礁の写真">
                   </div>
@@ -258,7 +258,7 @@
                 </a>
               </div>
               <div class="blog-cards__card blog-card">
-                <a class="blog-card__link" href="#">
+                <a class="blog-card__link" href="/single.html">
                   <div class="blog-card__img">
                     <img src="./assets/images/common/blog_2.jpg" alt="海亀が海中を泳いでいる様子">
                   </div>
@@ -275,7 +275,7 @@
                 </a>
               </div>
               <div class="blog-cards__card blog-card">
-                <a class="blog-card__link" href="#">
+                <a class="blog-card__link" href="/single.html">
                   <div class="blog-card__img">
                     <img src="./assets/images/common/blog_3.jpg" alt="イソギンチャクに隠れているカクレクマノミ">
                   </div>
@@ -292,7 +292,7 @@
                 </a>
               </div>
               <div class="blog-cards__card blog-card">
-                <a class="blog-card__link" href="#">
+                <a class="blog-card__link" href="/single.html">
                   <div class="blog-card__img">
                     <img src="./assets/images/common/blog_4.jpg" alt="黄色い熱帯魚">
                   </div>
@@ -309,7 +309,7 @@
                 </a>
               </div>
               <div class="blog-cards__card blog-card">
-                <a class="blog-card__link" href="#">
+                <a class="blog-card__link" href="/single.html">
                   <div class="blog-card__img">
                     <img src="./assets/images/common/blog_5.jpg" alt="白い砂浜の上にいる白と黒のウミウシ">
                   </div>
@@ -326,7 +326,7 @@
                 </a>
               </div>
               <div class="blog-cards__card blog-card">
-                <a class="blog-card__link" href="#">
+                <a class="blog-card__link" href="/single.html">
                   <div class="blog-card__img">
                     <img src="./assets/images/common/blog_6.jpg" alt="暗い水中を漂う多数のクラゲ">
                   </div>
@@ -343,7 +343,7 @@
                 </a>
               </div>
               <div class="blog-cards__card blog-card">
-                <a class="blog-card__link" href="#">
+                <a class="blog-card__link" href="/single.html">
                   <div class="blog-card__img">
                     <img src="./assets/images/common/blog_7.jpg" alt="暗い水中を漂う多数のクラゲ">
                   </div>
@@ -360,7 +360,7 @@
                 </a>
               </div>
               <div class="blog-cards__card blog-card">
-                <a class="blog-card__link" href="#">
+                <a class="blog-card__link" href="/single.html">
                   <div class="blog-card__img">
                     <img src="./assets/images/common/blog_8.jpg" alt="黄色い熱帯魚">
                   </div>
@@ -377,7 +377,7 @@
                 </a>
               </div>
               <div class="blog-cards__card blog-card">
-                <a class="blog-card__link" href="#">
+                <a class="blog-card__link" href="/single.html">
                   <div class="blog-card__img">
                     <img src="./assets/images/common/blog_9.jpg" alt="白い砂浜の上にいる白と黒のウミウシ">
                   </div>
@@ -394,7 +394,7 @@
                 </a>
               </div>
               <div class="blog-cards__card blog-card">
-                <a class="blog-card__link" href="#">
+                <a class="blog-card__link" href="/single.html">
                   <div class="blog-card__img">
                     <img src="./assets/images/common/blog_10.jpg" alt="暗い水中を漂う多数のクラゲ">
                   </div>
@@ -430,7 +430,7 @@
                 </div>
                 <div class="aside__blog-cards">
                   <div class="aside__blog-card blog-card blog-card--aside">
-                    <a class="blog-card__link" href="#">
+                    <a class="blog-card__link" href="/single.html">
                       <div class="blog-card__img">
                         <img src="./assets/images/common/blog_4.jpg" alt="黄色い熱帯魚">
                       </div>
@@ -443,7 +443,7 @@
                     </a>
                   </div>
                   <div class="aside__blog-card blog-card blog-card--aside">
-                    <a class="blog-card__link" href="#">
+                    <a class="blog-card__link" href="/single.html">
                       <div class="blog-card__img">
                         <img src="./assets/images/common/blog_2.jpg" alt="海亀が海中を泳いでいる様子">
                       </div>
@@ -456,7 +456,7 @@
                     </a>
                   </div>
                   <div class="aside__blog-card blog-card blog-card--aside">
-                    <a class="blog-card__link" href="#">
+                    <a class="blog-card__link" href="/single.html">
                       <div class="blog-card__img">
                         <img src="./assets/images/common/blog_3.jpg" alt="ピンクの珊瑚礁の写真">
                       </div>
@@ -677,9 +677,9 @@
                     <a href="/page-info.html">ダイビング情報</a>
                   </div>
                   <ul class="menu__list">
-                    <li><a href="/page-info.html">ライセンス取得</a></li>
-                    <li><a href="/page-info.html">体験ダイビング</a></li>
-                    <li><a href="/page-info.html">ファンダイビング</a></li>
+                    <li><a href="/page-info.html#tab1">ライセンス取得</a></li>
+                    <li><a href="/page-info.html#tab2">体験ダイビング</a></li>
+                    <li><a href="/page-info.html#tab3">ファンダイビング</a></li>
                   </ul>
                 </div>
                 <div class="menu__item">
@@ -701,9 +701,9 @@
                     <a href="/page-price.html">料金一覧</a>
                   </div>
                   <ul class="menu__list">
-                    <li><a href="/page-price.html">ライセンス講習</a></li>
-                    <li><a href="/page-price.html">体験ダイビング</a></li>
-                    <li><a href="/page-price.html">ファンダイビング</a></li>
+                    <li><a href="/page-price.html#item1">ライセンス講習</a></li>
+                    <li><a href="/page-price.html#item2">体験ダイビング</a></li>
+                    <li><a href="/page-price.html#item3">ファンダイビング</a></li>
                   </ul>
                 </div>
               </div>
