--- a/src/page-site-map.html
+++ b/src/page-site-map.html
@@ -39,11 +39,11 @@
 <body>
   <header class="header">
     <div class="header__inner">
-      <div class="header__logoBlock">
+      <h1 class="header__logoBlock">
         <a href="/" class="header__logoLink js-logoLink">
           <img class="header__logo" src="./assets/images/common/logo.svg" alt="CodeUps">
         </a>
-      </div>
+      </h1>
       <button class="header__drawer hamburger js-hamburger">
         <span></span>
         <span></span>
@@ -77,9 +77,9 @@
                       <a href="/page-info.html">ダイビング情報</a>
                     </div>
                     <ul class="menu__list">
-                      <li><a href="/page-info.html">ライセンス講習</a></li>
-                      <li><a href="/page-info.html">体験ダイビング</a></li>
-                      <li><a href="/page-info.html">ファンダイビング</a></li>
+                      <li><a href="/page-info.html#tab1">ライセンス講習</a></li>
+                      <li><a href="/page-info.html#tab2">体験ダイビング</a></li>
+                      <li><a href="/page-info.html#tab3">ファンダイビング</a></li>
                     </ul>
                   </div>
                   <div class="menu__item">
@@ -101,9 +101,9 @@
                       <a href="/page-price.html">料金一覧</a>
                     </div>
                     <ul class="menu__list">
-                      <li><a href="/page-price.html">ライセンス講習</a></li>
-                      <li><a href="/page-price.html">体験ダイビング</a></li>
-                      <li><a href="/page-price.html">ファンダイビング</a></li>
+                      <li><a href="/page-price.html#item1">ライセンス講習</a></li>
+                      <li><a href="/page-price.html#item2">体験ダイビング</a></li>
+                      <li><a href="/page-price.html#item3">ファンダイビング</a></li>
                     </ul>
                   </div>
                 </div>
@@ -424,12 +424,14 @@
         </div>
         <ul class="footer__sns-list">
           <li class="footer__sns-item">
-            <a href="#" class="footer__sns-link" aria-label="" target="_blank">
+            <a href="https://twitter.com/HIROKICHI_315" class="footer__sns-link" rel="noopener noreferrer" aria-label=""
+              target="_blank">
               <img src="./assets/images/common/icon-facebook.svg" alt="フェイスブックのアイコン">
             </a>
           </li>
           <li class="footer__sns-item">
-            <a href="#" class="footer__sns-link" aria-label="" target="_blank">
+            <a href="https://twitter.com/HIROKICHI_315" class="footer__sns-link" rel="noopener noreferrer" aria-label=""
+              target="_blank">
               <img src="./assets/images/common/icon-instagram.svg" alt="インスタグラムのアイコン">
             </a>
           </li>
@@ -462,9 +464,9 @@
                     <a href="/page-info.html">ダイビング情報</a>
                   </div>
                   <ul class="menu__list">
-                    <li><a href="/page-info.html">ライセンス取得</a></li>
-                    <li><a href="/page-info.html">体験ダイビング</a></li>
-                    <li><a href="/page-info.html">ファンダイビング</a></li>
+                    <li><a href="/page-info.html#tab1">ライセンス取得</a></li>
+                    <li><a href="/page-info.html#tab2">体験ダイビング</a></li>
+                    <li><a href="/page-info.html#tab3">ファンダイビング</a></li>
                   </ul>
                 </div>
                 <div class="menu__item">
@@ -486,9 +488,9 @@
                     <a href="/page-price.html">料金一覧</a>
                   </div>
                   <ul class="menu__list">
-                    <li><a href="/page-price.html">ライセンス講習</a></li>
-                    <li><a href="/page-price.html">体験ダイビング</a></li>
-                    <li><a href="/page-price.html">ファンダイビング</a></li>
+                    <li><a href="/page-price.html#item1">ライセンス講習</a></li>
+                    <li><a href="/page-price.html#item2">体験ダイビング</a></li>
+                    <li><a href="/page-price.html#item3">ファンダイビング</a></li>
                   </ul>
                 </div>
               </div>
