fix：カテゴリをbuttonへ変更

--- a/src/archive-campaign.html
+++ b/src/archive-campaign.html
@@ -242,16 +242,16 @@
         <div class="category">
           <ul class="category__list">
             <li class="category__item category__item--current">
-              <p>ALL</p>
+              <button>ALL</button>
             </li>
             <li class="category__item">
-              <p>ライセンス講習</p>
+              <button>ライセンス講習</button>
             </li>
             <li class="category__item">
-              <p>ファンダイビング</p>
+              <button>ファンダイビング</button>
             </li>
             <li class="category__item">
-              <p>体験ダイビング</p>
+              <button>体験ダイビング</button>
             </li>
           </ul>
         </div>
