fix：page-info：タブの画像を修正

--- a/src/page-info.html
+++ b/src/page-info.html
@@ -243,10 +243,10 @@
               <a id="tab1" class="tab__button js-tab-button">
                 <h2 class="tab__button-title">ライセンス<br class="u-mobile">講習</h2>
               </a>
-              <a id="tab2" class="tab__button js-tab-button">
+              <a id="tab2" class="tab__button tab__button--whale2 js-tab-button">
                 <h2 class="tab__button-title">体験<br class="u-mobile">ダイビング</h2>
               </a>
-              <a id="tab3" class="tab__button js-tab-button">
+              <a id="tab3" class="tab__button tab__button--fish js-tab-button">
                 <h2 class="tab__button-title">ファン<br class="u-mobile">ダイビング</h2>
               </a>
             </div>
