--- a/src/single.html
+++ b/src/single.html
@@ -386,7 +386,7 @@
                   </div>
                 </div>
                 <div class="aside__btn">
-                  <a href="archive-campaign.html" class="button">
+                  <a href="page-contact.html" class="button">
                     <p>Contact us</p>
                   </a>
                 </div>
