--- a/src/page-contact.html
+++ b/src/page-contact.html
@@ -314,7 +314,7 @@
 
   </main>
 
-  <footer class="footer">
+  <footer class="footer footer--sub-contact">
     <div class="footer__inner inner">
       <div class="footer__head">
         <div class="footer__logoBlock">
