--- a/src/page-faq.html
+++ b/src/page-faq.html
@@ -316,7 +316,7 @@
       </div>
     </section>
 
-    <section class="contact layout-sub-contact">
+    <section class="contact layout-sub-contact layout-sub-contact--faq">
       <div class="contact__inner inner">
         <div class="contact__content">
           <div class="contact__top">
