--- a/src/page-info.html
+++ b/src/page-info.html
@@ -223,7 +223,7 @@
         <p class="heroTitle__subtitle">into the ocean</p>
       </div>
     </div>
-    <section class="sub-mv sub-mv--sub-faq">
+    <section class="sub-mv sub-mv--sub-info">
       <div class="sub-mv__title">
         <h1>Information</h1>
       </div>
