--- a/src/404.html
+++ b/src/404.html
@@ -37,7 +37,7 @@
 </head>
 
 <body class="error-page-body page-container">
-  <header class="header">
+  <header class="header layout-header">
     <div class="header__inner">
       <h1 class="header__logoBlock">
         <a href="/" class="header__logoLink js-logoLink">
