--- a/src/page-privacy.html
+++ b/src/page-privacy.html
@@ -44,7 +44,7 @@
           <img class="header__logo" src="./assets/images/common/logo.svg" alt="CodeUps">
         </a>
       </h1>
-      <button class="header__drawer hamburger js-hamburger">
+      <button class="header__hamburger hamburger js-hamburger">
         <span></span>
         <span></span>
         <span></span>
