fix：to-topのidを削除

--- a/src/page-thanks.html
+++ b/src/page-thanks.html
@@ -249,7 +249,7 @@
       </div>
     </section>
 
-    <div class="to-top" id="page-top">
+    <div class="to-top">
       <a href="#"><span></span></a>
     </div>
 
