--- a/src/archive-campaign.html
+++ b/src/archive-campaign.html
@@ -498,7 +498,7 @@
       </div>
     </section>
 
-    <div class="to-top" id="page-top">
+    <div class="to-top">
       <a href="#"><span></span></a>
     </div>
 
