--- a/src/page-about.html
+++ b/src/page-about.html
@@ -343,7 +343,7 @@
       </div>
     </section>
 
-    <div class="to-top" id="page-top">
+    <div class="to-top">
       <a href="#"><span></span></a>
     </div>
 
