--- a/src/page-contact.html
+++ b/src/page-contact.html
@@ -308,7 +308,7 @@
       </div>
     </section>
 
-    <div class="to-top" id="page-top">
+    <div class="to-top">
       <a href="#"><span></span></a>
     </div>
 
