--- a/src/page-info.html
+++ b/src/page-info.html
@@ -338,7 +338,7 @@
       </div>
     </section>
 
-    <div class="to-top" id="page-top">
+    <div class="to-top">
       <a href="#"><span></span></a>
     </div>
 
