--- a/src/page-terms-of-service.html
+++ b/src/page-terms-of-service.html
@@ -320,7 +320,7 @@
       </div>
     </section>
 
-    <div class="to-top" id="page-top">
+    <div class="to-top">
       <a href="#"><span></span></a>
     </div>
 
