--- a/src/single.html
+++ b/src/single.html
@@ -463,7 +463,7 @@
       </div>
     </section>
 
-    <div class="to-top" id="page-top">
+    <div class="to-top">
       <a href="#"><span></span></a>
     </div>
 
