fix：loadingのクラス名を修正

--- a/src/index.html
+++ b/src/index.html
@@ -212,15 +212,15 @@
 
   <main>
 
-    <div class="loading">
-      <div class="loading__circle"></div>
-      <div class="loading__wrap">
-        <div class="loading__left"></div>
-        <div class="loading__right"></div>
+    <div class="loading js-loading">
+      <div class="loading__circle js-loading-circle"></div>
+      <div class="loading__wrap js-loading-wrap">
+        <div class="loading__left js-loading-left"></div>
+        <div class="loading__right js-loading-right"></div>
       </div>
       <div class="loading__header heroTitle">
-        <p class="heroTitle__title">diving</p>
-        <p class="heroTitle__subtitle">into the ocean</p>
+        <p class="heroTitle__title js-loading-title">diving</p>
+        <p class="heroTitle__subtitle js-loading-subtitle">into the ocean</p>
       </div>
     </div>
 
