--- a/src/index.html
+++ b/src/index.html
@@ -745,47 +745,47 @@
               <li class="price__item">
                 <h3 class="price__sub-title under-line">ライセンス講習</h3>
                 <dl class="price__list price-list">
-                  <dt>オープンウォーターダイバーコース</dt>
-                  <dd>¥50,000</dd>
-                  <dt>アドバンスドオープンウォーターコース</dt>
-                  <dd>¥60,000</dd>
-                  <dt>レスキュー＋EFRコース</dt>
-                  <dd>¥70,000</dd>
+                  <dt class="price__list-term">オープンウォーターダイバーコース</dt>
+                  <dd class="price__list-description">¥50,000</dd>
+                  <dt class="price__list-term">アドバンスドオープンウォーターコース</dt>
+                  <dd class="price__list-description">¥60,000</dd>
+                  <dt class="price__list-term">レスキュー＋EFRコース</dt>
+                  <dd class="price__list-description">¥70,000</dd>
                 </dl>
               </li>
               <li class="price__item">
                 <h3 class="price__sub-title under-line">体験ダイビング</h3>
                 <dl class="price__list price-list">
-                  <dt>ビーチ体験ダイビング(半日)</dt>
-                  <dd>¥7,000</dd>
-                  <dt>ビーチ体験ダイビング(1日)</dt>
-                  <dd>¥14,000</dd>
-                  <dt>ボート体験ダイビング(半日)</dt>
-                  <dd>¥10,000</dd>
-                  <dt>ボート体験ダイビング(1日)</dt>
-                  <dd>¥18,000</dd>
+                  <dt class="price__list-term">ビーチ体験ダイビング(半日)</dt>
+                  <dd class="price__list-description">¥7,000</dd>
+                  <dt class="price__list-term">ビーチ体験ダイビング(1日)</dt>
+                  <dd class="price__list-description">¥14,000</dd>
+                  <dt class="price__list-term">ボート体験ダイビング(半日)</dt>
+                  <dd class="price__list-description">¥10,000</dd>
+                  <dt class="price__list-term">ボート体験ダイビング(1日)</dt>
+                  <dd class="price__list-description">¥18,000</dd>
                 </dl>
               </li>
               <li class="price__item">
                 <h3 class="price__sub-title under-line">ファンダイビング</h3>
                 <dl class="price__list price-list">
-                  <dt>ビーチダイビング(2ダイブ)</dt>
-                  <dd>¥14,000</dd>
-                  <dt>ボートダイビング(2ダイブ)</dt>
-                  <dd>¥18,000</dd>
-                  <dt>スペシャルダイビング(2ダイブ)</dt>
-                  <dd>¥24,000</dd>
-                  <dt>ナイトダイビング(1ダイブ)</dt>
-                  <dd>¥10,000</dd>
+                  <dt class="price__list-term">ビーチダイビング(2ダイブ)</dt>
+                  <dd class="price__list-description">¥14,000</dd>
+                  <dt class="price__list-term">ボートダイビング(2ダイブ)</dt>
+                  <dd class="price__list-description">¥18,000</dd>
+                  <dt class="price__list-term">スペシャルダイビング(2ダイブ)</dt>
+                  <dd class="price__list-description">¥24,000</dd>
+                  <dt class="price__list-term">ナイトダイビング(1ダイブ)</dt>
+                  <dd class="price__list-description">¥10,000</dd>
                 </dl>
               </li>
               <li class="price__item">
                 <h3 class="price__sub-title under-line">スペシャルダイビング</h3>
                 <dl class="price__list price-list">
-                  <dt>貸切ダイビング(2ダイブ)</dt>
-                  <dd>¥24,000</dd>
-                  <dt>1日ダイビング(3ダイブ)</dt>
-                  <dd>¥32,000</dd>
+                  <dt class="price__list-term">貸切ダイビング(2ダイブ)</dt>
+                  <dd class="price__list-description">¥24,000</dd>
+                  <dt class="price__list-term">1日ダイビング(3ダイブ)</dt>
+                  <dd class="price__list-description">¥32,000</dd>
                 </dl>
               </li>
             </ul>
