fix：Contactのクラス名を修正

--- a/src/single.html
+++ b/src/single.html
@@ -424,12 +424,12 @@
     <section class="contact layout-sub-contact layout-sub-contact--sub-blog">
       <div class="contact__inner inner">
         <div class="contact__content">
-          <div class="contact__top">
+          <div class="contact__info">
             <div class="contact__logoBlock under-line">
               <img class="contact__logo" src="./assets/images/common/logo-green.svg" alt="CodeUps">
             </div>
             <div class="contact__flex">
-              <div class="contact__info text">
+              <div class="contact__detail text">
                 <p>沖縄県那覇市1-1</p>
                 <p>TEL:0120-000-0000</p>
                 <p>営業時間:8:30-19:00</p>
@@ -443,7 +443,7 @@
               </div>
             </div>
           </div>
-          <div class="contact__bottom">
+          <div class="contact__action">
             <div class="contact__section-title section-title section-title--contact">
               <p class="section-title__eng">Contact</p>
               <h2 class="section-title__ja">お問い合わせ</h2>
@@ -454,7 +454,7 @@
               </p>
             </div>
             <div class="contact__btn">
-              <a href="#" class="button">
+              <a href="/page-contact.html" class="button">
                 <p>Contact us</p>
               </a>
             </div>
