--- a/src/404.html
+++ b/src/404.html
@@ -249,7 +249,7 @@
 
   </main>
 
-  <footer class="footer footer--error-page">
+  <footer class="footer footer--error-page layout-footer layout-footer--error-page">
     <div class="footer__inner inner">
       <div class="footer__head">
         <div class="footer__logoBlock">
@@ -360,7 +360,7 @@
           </div>
         </div>
         <div class="footer__copyright">
-          <p>Copyright &copy; 2021 - 2023 CodeUps LLC. All Rights Reserved.</p>
+          <small>Copyright &copy; 2021 - 2023 CodeUps LLC. All Rights Reserved.</small>
         </div>
       </nav>
     </div>
