--- a/src/archive-campaign.html
+++ b/src/archive-campaign.html
@@ -504,7 +504,7 @@
 
   </main>
 
-  <footer class="footer">
+  <footer class="footer layout-footer">
     <div class="footer__inner inner">
       <div class="footer__head">
         <div class="footer__logoBlock">
@@ -615,7 +615,7 @@
           </div>
         </div>
         <div class="footer__copyright">
-          <p>Copyright &copy; 2021 - 2023 CodeUps LLC. All Rights Reserved.</p>
+          <small>Copyright &copy; 2021 - 2023 CodeUps LLC. All Rights Reserved.</small>
         </div>
       </nav>
     </div>
