--- a/src/page-about.html
+++ b/src/page-about.html
@@ -349,7 +349,7 @@
 
   </main>
 
-  <footer class="footer">
+  <footer class="footer layout-footer">
     <div class="footer__inner inner">
       <div class="footer__head">
         <div class="footer__logoBlock">
@@ -460,7 +460,7 @@
           </div>
         </div>
         <div class="footer__copyright">
-          <p>Copyright &copy; 2021 - 2023 CodeUps LLC. All Rights Reserved.</p>
+          <small>Copyright &copy; 2021 - 2023 CodeUps LLC. All Rights Reserved.</small>
         </div>
       </nav>
     </div>
