--- a/src/page-info.html
+++ b/src/page-info.html
@@ -344,7 +344,7 @@
 
   </main>
 
-  <footer class="footer">
+  <footer class="footer layout-footer">
     <div class="footer__inner inner">
       <div class="footer__head">
         <div class="footer__logoBlock">
@@ -455,7 +455,7 @@
           </div>
         </div>
         <div class="footer__copyright">
-          <p>Copyright &copy; 2021 - 2023 CodeUps LLC. All Rights Reserved.</p>
+          <small>Copyright &copy; 2021 - 2023 CodeUps LLC. All Rights Reserved.</small>
         </div>
       </nav>
     </div>
