--- a/src/page-thanks.html
+++ b/src/page-thanks.html
@@ -255,7 +255,7 @@
 
   </main>
 
-  <footer class="footer footer--thanks">
+  <footer class="footer layout-footer layout-footer--thanks">
     <div class="footer__inner inner">
       <div class="footer__head">
         <div class="footer__logoBlock">
@@ -366,7 +366,7 @@
           </div>
         </div>
         <div class="footer__copyright">
-          <p>Copyright &copy; 2021 - 2023 CodeUps LLC. All Rights Reserved.</p>
+          <small>Copyright &copy; 2021 - 2023 CodeUps LLC. All Rights Reserved.</small>
         </div>
       </nav>
     </div>
