--- a/src/single.html
+++ b/src/single.html
@@ -469,7 +469,7 @@
 
   </main>
 
-  <footer class="footer">
+  <footer class="footer layout-footer">
     <div class="footer__inner inner">
       <div class="footer__head">
         <div class="footer__logoBlock">
